Bug 15083 - [3.4/4.0 Regression]spurious "statement has no effect" warning
Summary: [3.4/4.0 Regression]spurious "statement has no effect" warning
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 3.4.0
: P2 normal
Target Milestone: 3.4.1
Assignee: Mark Mitchell
URL:
Keywords: diagnostic
: 15333 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-04-22 23:20 UTC by David Carlton
Modified: 2004-10-30 21:11 UTC (History)
2 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Known to work: 3.3.3
Known to fail: 3.4.0 4.0.0
Last reconfirmed: 2004-04-22 23:43:41


Attachments
preprocessed source (89.66 KB, text/plain)
2004-04-22 23:21 UTC, David Carlton
Details
unpreprocessed source (400 bytes, text/plain)
2004-04-22 23:22 UTC, David Carlton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Carlton 2004-04-22 23:20:14 UTC
When I compile the following program with g++ -Wall (where g++ is the
released 3.4.0), I get the following warning:

quartette$ /net/quartette/carlton/gcc/gcc-3.4.0/install/bin/g++ -Wall test.cpp
test.cpp: In member function `void Foo<T>::resetData()':
test.cpp:31: warning: statement has no effect

The line in question is this one:

        new ( refLoc ) Counter();

but Counter's contructor does have a side effect.  (Indeed, the output
of the program changes if you compile out that line.)

Here's the source code; I'll attach a .ii file as well.  (The .ii
file is kind of large, because I include <iostream> to show that
the line in question does indeed change the behavior of the program.)

#include <new>
#include <iostream>

class Counter {
public:
    void decrement() { --ref_; }

    Counter() : ref_(1) {}

    int ref() const {
        return ref_;
    }

private:
    int ref_;
};

template< typename T >
class Foo {
  public:
    void resetData() {
        ref_.decrement();
        std::cout << "before: " << ref_.ref() << std::endl;
        ref_.~Counter();
        void *refLoc = &ref_;

        // GCC erroneously claims that the following line has no
        // effect.  But it does have an effect: the value of the
        // "after" message will be 0 instead of 1 if you comment it
        // out.
        new ( refLoc ) Counter();

        std::cout << "after: " << ref_.ref() << std::endl;
    }

  private:
    Counter ref_;
};

int main() {
    Foo< int > node;

    node.resetData();
}
Comment 1 David Carlton 2004-04-22 23:21:23 UTC
Created attachment 6143 [details]
preprocessed source
Comment 2 David Carlton 2004-04-22 23:22:15 UTC
Created attachment 6144 [details]
unpreprocessed source
Comment 3 David Carlton 2004-04-22 23:38:26 UTC
By the way, this is a regression - it works with GCC 3.2.3.  (I haven't
tried it with other GCC versions.)
Comment 4 Drea Pinski 2004-04-22 23:43:40 UTC
Confirmed, here is the reduced source:
extern "C" int printf(const char*,...);
void *operator new(__SIZE_TYPE__, void*);
struct Counter {
    Counter(){printf("Hello World.\n");}
};
void *t;
template< typename T >
void resetData() {
        new ( t) Counter();
}
int main() {
    resetData<int>();
}
Comment 5 Drea Pinski 2004-05-06 23:23:30 UTC
*** Bug 15333 has been marked as a duplicate of this bug. ***
Comment 6 Drea Pinski 2004-05-06 23:26:06 UTC
Here is another case (dervided from this PR and PR 15333):
extern "C" int printf(const char*,...);
struct Counter {
    Counter(){printf("Hello World.\n");}
};
template< typename T >
void resetData() {
        new Counter();
}
int main() {
    resetData<int>();
} 
Comment 7 Mark Mitchell 2004-05-28 21:28:36 UTC
Working on a fix.
Comment 8 GCC Commits 2004-05-28 22:29:51 UTC
Subject: Bug 15083

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-3_4-branch
Changes by:	mmitchel@gcc.gnu.org	2004-05-28 22:29:44

Modified files:
	gcc/cp         : ChangeLog decl2.c init.c name-lookup.c typeck.c 
	gcc/testsuite  : ChangeLog 
Added files:
	gcc/testsuite/g++.dg/expr: ptrmem4.C 
	gcc/testsuite/g++.dg/template: operator3.C 
	gcc/testsuite/g++.dg/warn: noeffect5.C 

Log message:
	PR c++/15083
	* decl2.c (delete_sanity): Set TREE_SIDE_EFFECTS on a DELETE_EXPR,
	even in a templat.e
	* init.c (build_new): Likewise.
	
	PR c++/15640
	* name-lookup.c (arg_assoc): Robustify.
	
	PR c++/15471
	* typeck.c (unary_complex_lvalue): Use context_for_name_lookup
	when determining the scope to use for a pointer to member.
	
	PR c++/15083
	* g++.dg/warn/noeffect5.C: New test.
	
	PR c++/15471
	* g++.dg/expr/ptrmem4.C: New test.
	
	PR c++/15640
	* g++.dg/template/operator3.C: New test.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.3892.2.107&r2=1.3892.2.108
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/decl2.c.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.695.4.7&r2=1.695.4.8
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/init.c.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.356.2.9&r2=1.356.2.10
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/name-lookup.c.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.34.2.12&r2=1.34.2.13
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/typeck.c.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.519.2.16&r2=1.519.2.17
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.3389.2.185&r2=1.3389.2.186
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/expr/ptrmem4.C.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=NONE&r2=1.1.2.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/template/operator3.C.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=NONE&r2=1.1.2.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/warn/noeffect5.C.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=NONE&r2=1.2.4.1

Comment 9 GCC Commits 2004-05-28 22:35:57 UTC
Subject: Bug 15083

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	mmitchel@gcc.gnu.org	2004-05-28 22:35:50

Modified files:
	gcc/cp         : ChangeLog decl2.c init.c name-lookup.c typeck.c 
	gcc/testsuite  : ChangeLog 
Added files:
	gcc/testsuite/g++.dg/expr: ptrmem4.C 
	gcc/testsuite/g++.dg/template: operator3.C 
	gcc/testsuite/g++.dg/warn: noeffect6.C 

Log message:
	PR c++/15083
	* decl2.c (delete_sanity): Set TREE_SIDE_EFFECTS on a DELETE_EXPR,
	even in a templat.e
	* init.c (build_new): Likewise.
	
	PR c++/15640
	* name-lookup.c (arg_assoc): Robustify.
	
	PR c++/15471
	* typeck.c (unary_complex_lvalue): Use context_for_name_lookup
	when determining the scope to use for a pointer to member.
	
	PR c++/15083
	* g++.dg/warn/noeffect5.C: New test.
	
	PR c++/15471
	* g++.dg/expr/ptrmem4.C: New test.
	
	PR c++/15640
	* g++.dg/template/operator3.C: New test.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/ChangeLog.diff?cvsroot=gcc&r1=1.4064&r2=1.4065
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/decl2.c.diff?cvsroot=gcc&r1=1.709&r2=1.710
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/init.c.diff?cvsroot=gcc&r1=1.370&r2=1.371
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/name-lookup.c.diff?cvsroot=gcc&r1=1.54&r2=1.55
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/typeck.c.diff?cvsroot=gcc&r1=1.544&r2=1.545
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.3789&r2=1.3790
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/expr/ptrmem4.C.diff?cvsroot=gcc&r1=1.1&r2=1.2
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/template/operator3.C.diff?cvsroot=gcc&r1=1.1&r2=1.2
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/warn/noeffect6.C.diff?cvsroot=gcc&r1=NONE&r2=1.1

Comment 10 Mark Mitchell 2004-05-28 23:35:08 UTC
Fixed in GCC 3.4.1.